zeit.content.article changes
============================

3.5.4 (unreleased)
------------------

- Add "push to mobile" to social media section, send breaking news on a
  separate parse.com channel (VIV-466).


3.5.3 (2014-08-27)
------------------

- Reactivate posting breaking news to Facebook.


3.5.2 (2014-07-30)
------------------

- Make create_article test helper do the same things that creating through the
  browser would do.


3.5.1 (2014-07-17)
------------------

- Move JS filename normalization to zeit.cms.

- Move JS character counter to zeit.cms.

- Change social media checkboxes default to unchecked.

- Make social media settings writeable only while checked out (VIV-451).


3.5.0 (2014-07-10)
------------------

- Add DAV-Property ``is_breaking`` to mark articles that were created as
  breaking news, so the frontend can do different things to them (WEB-319).

- Create separate banner file ``/eilmeldung/wrapper-banner`` when "Homepage"
  is enabled (WEB-318).

- Split off EditorHelper test baseclass, for reuse from other packages.


3.4.7 (2014-07-02)
------------------

- Temporarily removed posting of breaking news to Facebook as we cannot yet
  handle images correctly in that scenario.


3.4.6 (2014-06-20)
------------------

- Configure twitter/facebook main account for breaking news (VIV-416).


3.4.5 (2014-06-20)
------------------

- Reactivate social media section, implement Facebook (VIV-387, VIV-371).

- Reactivate breaking news feature (again), make title character limit soft,
  group checkboxes differently, add Twitter/Facebook (VIV-25).

- Shorten twitter text if it is too long (VIV-370).

- Add button to retract breaking news banner (VIV-418).

- Fix filename rewriting: handle multiple umlauts, remove special characters at
  the end of the name (VIV-409).


3.4.4 (2014-06-05)
------------------

- Fix icon position in sprite (VIV-359, VIV-407)


3.4.3 (2014-06-05)
------------------
