@@ -690,6 +690,38 @@
     permission="zope.View"
     />
 
+  <!-- Channels -->
+
+  <browser:viewlet
+    for="zeit.content.article.interfaces.IArticle"
+    layer="zeit.cms.browser.interfaces.ICMSLayer"
+    view="zeit.edit.browser.form.Forms"
+    manager="zeit.edit.interfaces.IContentViewletManager"
+    name="channel"
+    class=".form.ChannelFormGroup"
+    permission="zope.View"
+    weight="20"
+    />
+
+  <browser:viewlet
+    for="zeit.content.article.interfaces.IArticle"
+    layer="zeit.cms.browser.interfaces.ICMSLayer"
+    view=".form.ChannelFormGroup"
+    manager="zeit.edit.interfaces.IContentViewletManager"
+    name="edit.form.channel-selector"
+    class="zeit.edit.browser.form.FormLoader"
+    permission="zope.View"
+    weight="10"
+    />
+
+  <browser:page
+    for="zeit.content.article.interfaces.IArticle"
+    layer="zeit.cms.browser.interfaces.ICMSLayer"
+    name="edit.form.channel-selector"
+    class=".form.ChannelSelector"
+    permission="zope.View"
+    />
+
   <!-- keywords (new article only) -->
 
   <browser:viewlet
